# rust-bitcoin-tx-parser

./: Cargo.toml  README.md
src/: lib.rs  main.rs
tests/: cli.rs
tests/expected/: tx1.txt  tx2.txt  tx3.txt  tx4.txt  tx5.txt
tests/transactions/: tx2.txt  tx3.txt  tx4.txt  tx5.txt
